refactor(ai): 重构AI命令服务实现类
- 重命名变量名 log 为 commandLog 以提高代码可读性